# pdf-parser

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/harness/: SKILL.md
.agents/skills/review/: SKILL.md
.codex/: hooks.json
.codex/hooks/: tdd-guard.sh
.githooks/: pre-commit  pre_commit_checks.py
docs/: ADR.md  ARCHITECTURE.md  PRD.md
scripts/: execute.py  test_execute.py  test_pre_commit_checks.py  test_tdd_guard_hook.py
src/pdf_parser/: __init__.py  cli.py  exceptions.py  models.py  parser.py  pdfplumber_backend.py  pymupdf_backend.py
tests/: test_cli.py  test_models.py  test_parser.py
