[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-parser"
version = "0.1.0"
description = "CLI and library for extracting structured JSON from PDF files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
pdf-parser = "pdf_parser.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

